--- a/style/style.css
+++ b/style/style.css
@@ -103,11 +103,14 @@ body {
         text-align: center;
     }
     .container {
-        top: 80px;
-        left: 10px;
-        right: 10px;
-        bottom: 80px;
-        background: var(--NAVY_BLUE);
+        top: 100px;
+        left: 20px;
+        right: 20px;
+        bottom: 100px;
+        background: url(../images/reunion2.jpg) no-repeat;
+        background-attachment: fixed;
+        border-radius: 15px;
+        box-shadow: 0 50px 50px rgb(58, 87, 214, 0.84);
     }
     .countdown {
         margin-top: 20px;
@@ -124,6 +127,7 @@ body {
         font-weight: 500;
     }
     .countdown div::before {
+        font-size: 0.4em;
         background: var(--BOX_COLOR);
     }
 }
@@ -150,6 +154,10 @@ body {
         right: 10px;
         bottom: 80px;
         background: var(--NAVY_BLUE);
+        /* background: url(../images/reunion2.jpg) no-repeat;
+        background-attachment: fixed;
+        border-radius: 15px;
+        box-shadow: 0 50px 50px rgb(58, 87, 214, 0.84); */
     }
     .countdown {
         margin-top: 20px;
