--- a/style/style.css
+++ b/style/style.css
@@ -171,6 +171,89 @@ body {
     font-size: 0.8rem;
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+    /* justify-content: space-between; */
+    align-items: center;
+    background-color: #171846;
+    padding: 20px 10px;
+}
+
+footer p {
+    color: whitesmoke;
+    font-family: var(--SECOND_FONT);
+    font-weight: 900;
+}
+
+.content h2 {
+    padding-bottom: 12px;
+    color: whitesmoke;
+    font-size: 1.2rem;
+}
+
+a {
+    text-decoration: none;
+}
+
+.personal_details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2px 10px;
+}
+
+.image {
+    margin: 0 20px;
+}
+
+.contact_details p {
+    font-size: 0.9rem;
+    padding-top: 10px;
+}
+
+.name {
+    border-bottom: solid 2px var(--BOX_COLOR);
+    margin-bottom: 20px;
+}
+
+.name h2 {
+    color: whitesmoke;
+    padding-bottom: 4px;
+}
+
+.name h5 {
+    color: whitesmoke;
+    padding-bottom: 7px;
+}
+
+.personal_details div img {
+    width: 120px;
+    height: 120px;
+    border-radius: 60px;
+}
+
+.personal_details a {
+    color: whitesmoke;
+}
+
+.fa-facebook, .fa-instagram {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--NAVY_BLUE);
+    width: 22px;
+    height: 22px;
+    border-radius: 50px;
+    background-color: whitesmoke;
+    margin: 10px;
+}
+
+.content img {
+    width: 20px;
+    height: 20px;
+}
+
 @media screen and (max-width: 600px) {
     .container h2 {
         text-align: center;
