--- a/style/style.css
+++ b/style/style.css
@@ -24,6 +24,14 @@ body {
 
 .container {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+}
+
+.wrapper {
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -34,7 +42,7 @@ body {
     box-shadow: 0 50px 50px rgb(58, 87, 214, 0.84);
 }
 
-.container h2 {
+.wrapper h2 {
     text-align: center;
     color: white;
     font-size: 5rem;
@@ -44,7 +52,7 @@ body {
     letter-spacing: 0.1em;
 }
 
-.container h2 span {
+.wrapper h2 span {
     display: block;
     color: white;
     font-weight: 900;
@@ -177,15 +185,13 @@ footer {
     /* position: absolute; */
     bottom: 0;
     right: 0;
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     justify-content: center;
     /* justify-content: space-between; */
     align-items: center;
     background-color: #171846;
     padding: 20px 10px;
-    bottom: 0;
-    /* width: 100vw; */
 }
 
 footer p {
@@ -270,7 +276,7 @@ a {
 }
 
 @media screen and (max-width: 600px) {
-    .container h2 {
+    .wrapper h2 {
         text-align: center;
         color: white;
         font-size: 0.5rem;
@@ -278,14 +284,14 @@ a {
         font-size: 1rem;
         letter-spacing: 0.1em;
     }
-    .container h2 span {
+    .wrapper h2 span {
         display: block;
         color: white;
         font-weight: 600;
         font-size: 1.5rem;
         text-align: center;
     }
-    .container {
+    .wrapper {
         top: 100px;
         left: 20px;
         right: 20px;
@@ -323,7 +329,7 @@ a {
 }
 
 @media screen and (max-width: 300px) {
-    .container h2 {
+    .wrapper h2 {
         text-align: center;
         color: white;
         font-size: 0.5rem;
@@ -331,14 +337,14 @@ a {
         font-size: 0.7rem;
         letter-spacing: 0.1em;
     }
-    .container h2 span {
+    .wrapper h2 span {
         display: block;
         color: white;
         font-weight: 900;
         font-size: 1.2rem;
         text-align: center;
     }
-    .container {
+    .wrapper {
         top: 80px;
         left: 10px;
         right: 10px;
