--- a/style/style.css
+++ b/style/style.css
@@ -71,12 +71,12 @@ body {
     position: relative;
     display: flex;
     align-self: center;
-    background-color: #333;
+    /* background-color: #333; */
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     margin: 0 15px;
     color: white;
-    padding: 20px 18px;
+    padding: .1em .5em;
     text-align: center;
     font-size: 3em;
     font-weight: 500;
